feat: tentativa de processar as transações em segundo plano
