# docs/swagger.json
@@ -164,6 +164,54 @@
                     }
                 }
             }
+        },
+        "/transactions": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Add a bank transacation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transactions"
+                ],
+                "summary": "Create Transacation",
+                "parameters": [
+                    {
+                        "description": "Transaction details",
+                        "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/usecases.TransactionRequestDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.HttpErrorDTO"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.HttpErrorDTO"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -272,6 +320,20 @@
             "properties": {
                 "accessToken": {
                     "type": "string"
+                }
+            }
+        },
+        "usecases.TransactionRequestDTO": {
+            "type": "object",
+            "properties": {
+                "accountDestiny": {
+                    "type": "string"
+                },
+                "accountOrigin": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
                 }
             }
         }
